--- a/data-engineer.html
+++ b/data-engineer.html
@@ -40,6 +40,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.lever.co/geophy/52c0d3e3-6fbd-495b-a8f1-554c4a55b42f'>GeoPhy - Senior GIS Data Engineer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-29</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/geophy/f279d6b2-7d4f-443c-90d5-e840012c096b'>GeoPhy - Senior GIS Data Engineer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-29</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Bey/743999692432133--permanent-job-data-engineer-salary-140-180k-accept-visa-candidates'>Bey (Permanent Job) Data Engineer - Salary: $140-180K - Accept Visa Candidates | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-07-29</p>
@@ -58,7 +66,7 @@
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://twincap.join.com/jobs/276682-data-engineer'>Job @ TwinCap (Z?rich): Data Engineer | JOIN</a></h5> 
+<h5><a href='https://twincap.join.com/jobs/276682-data-engineer'>Job @ TwinCap (Z?rich): Data Engineer | JOIN</a></h5> 
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -74,7 +82,7 @@
 <p><span class="badge badge-light">London London London London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/bjss/jobs/1270432'>Job Application for Data Engineer  at BJSS</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bjss/jobs/1270432'>Job Application for Data Engineer  at BJSS</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -165,7 +173,7 @@ looking for an experienced data engineer who is devoted to...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://fractalanalytics.applytojob.com/apply/jLAj2ROWrk/Senior-Data-Engineer-Cloud'>Senior Data Engineer (Cloud) - Fractal Analytics - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://fractalanalytics.applytojob.com/apply/jLAj2ROWrk/Senior-Data-Engineer-Cloud'>Senior Data Engineer (Cloud) - Fractal Analytics - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -187,7 +195,7 @@ Assemble large?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... Apply online for the job of ETL Data Engineer at Photobox Group.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://platform-science.workable.com/jobs/1083475'>Senior Vehicle Data Engineer - Apply online - Platform Science - Jobs</a></h5> 
+<h5><a href='https://platform-science.workable.com/jobs/1083475'>Senior Vehicle Data Engineer - Apply online - Platform Science - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Apply online for the job of Senior Vehicle Data Engineer at Platform Science.</p>
 <hr/>
@@ -217,7 +225,7 @@ analytic,?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/creditkarma/e0393eaa-b5b7-4e08-961f-348633c9ddf5'>Credit Karma - Senior Data Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/creditkarma/e0393eaa-b5b7-4e08-961f-348633c9ddf5'>Credit Karma - Senior Data Engineer</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -299,7 +307,7 @@ data delivery systems and transform it into beautiful insights, analysis, and?..
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rakuten.referrals.selectminds.com/jobs/data-engineer-9706'>Data Engineer - Rakuten Careers</a></h5> 
+<h5><a href='https://rakuten.referrals.selectminds.com/jobs/data-engineer-9706'>Data Engineer - Rakuten Careers</a></h5> 
 <p><span class="badge badge-light">Tokyo Tokyo, Japan</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -433,11 +441,11 @@ Engineer for managing the CMDB (Configuration Management Database)?...</p>
 <p><span class="badge badge-light">London, England, United Kingdom London</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://workable.com/j/32463D2197?viewed=true'>Monese - Jobs: Data Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://workable.com/j/32463D2197?viewed=true'>Monese - Jobs: Data Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Apply online for the job of Data Engineer at Monese.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://keywords-intl1.workable.com/j/120579048C'>Keywords Studios - Jobs: Big Data Engineer - Apply online</a></h5> 
+<h5><a href='https://keywords-intl1.workable.com/j/120579048C'>Keywords Studios - Jobs: Big Data Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -463,19 +471,10 @@ broad disciplines from software, artificial intelligence/machine learning, elect
 <p><span class="badge badge-light">Bangalore Bangalore</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs-getty.icims.com/jobs/3440/data-engineer/job'>Data Engineer in Los Angeles, California | Careers at The Getty</a></h5> 
+<h5><a href='https://jobs-getty.icims.com/jobs/3440/data-engineer/job'>Data Engineer in Los Angeles, California | Careers at The Getty</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... The Getty is now hiring a Data Engineer in Los Angeles, California. Review all of 
 the job details and apply today!</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-goldmansachs.icims.com/jobs/52375/data-engineer-%28dio---edge%29---client-data-engineering/job'>Careers Center Data Engineer (DIO - Edge) - Client Data ...</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Jul 10, 2019 ... 0839 095 Y478 0000|Technology Division|Core Engineering|Data Intelligence|
-Core Engineering is now hiring a Data Engineer (DIO - Edge) - Client Data?...</p>
-<hr/>
-<h5><a href='http://fractalanalytics.applytojob.com/apply/jLAj2ROWrk/Senior-Data-Engineer'>Senior Data Engineer - Fractal Analytics - Career Page</a></h5> 
-<p><span class="badge badge-light">Mumbai Maharashtra, India</span></p>
-<p>Posted on: 2019-07-23</p>
 <hr/>
 
 
